tray: Fix garbled text in multiprofile dropdown.

Bug introduced when I was trying to show focus rectangle around user
card view by removing the background. Draw the background instead on
the parent, button_from_view, which the focus painter is on so that
the background does not cover the focus rectangle.

Also fix the separator between the user card view and the drop down,
before it only reached halfway (see bug for snapshot).

Test: manual
Bug: 786184
Change-Id: I54481c414a373a9f761d4b2f6b8097160633fbdc
Reviewed-on: https://chromium-review.googlesource.com/794853
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519897}
Former-commit-id: 1e8dc3961a145c78c60e74b9c84081bc1857b4a7